# mecab

./: CMakeLists.txt
mecab/python3/: MeCab.py  MeCab_wrap.cxx  README  setup.py  test.py
