cmake_minimum_required(VERSION 3.9)
project(my_mecab)

set(CMAKE_CXX_STANDARD 11)

add_executable(my_mecab
        mecab/example/example.c
        mecab/example/example.cpp
        mecab/example/example_lattice.c
        mecab/example/example_lattice.cpp
        mecab/example/thread_test.cpp
        mecab/src/char_property.cpp
        mecab/src/char_property.h
        mecab/src/common.h
        mecab/src/connector.cpp
        mecab/src/connector.h
        mecab/src/context_id.cpp
        mecab/src/context_id.h
        mecab/src/darts.h
        mecab/src/dictionary.cpp
        mecab/src/dictionary.h
        mecab/src/dictionary_compiler.cpp
        mecab/src/dictionary_generator.cpp
        mecab/src/dictionary_rewriter.cpp
        mecab/src/dictionary_rewriter.h
        mecab/src/eval.cpp
        mecab/src/feature_index.cpp
        mecab/src/feature_index.h
        mecab/src/freelist.h
        mecab/src/iconv_utils.cpp
        mecab/src/iconv_utils.h
        mecab/src/lbfgs.cpp
        mecab/src/lbfgs.h
        mecab/src/learner.cpp
        mecab/src/learner_node.h
        mecab/src/learner_tagger.cpp
        mecab/src/learner_tagger.h
        mecab/src/libmecab.cpp
        mecab/src/mecab-cost-train.cpp
        mecab/src/mecab-dict-gen.cpp
        mecab/src/mecab-dict-index.cpp
        mecab/src/mecab-system-eval.cpp
        mecab/src/mecab-test-gen.cpp
        mecab/src/mecab.cpp
        mecab/src/mecab.h
        mecab/src/mmap.h
        mecab/src/nbest_generator.cpp
        mecab/src/nbest_generator.h
        mecab/src/param.cpp
        mecab/src/param.h
        mecab/src/scoped_ptr.h
        mecab/src/stream_wrapper.h
        mecab/src/string_buffer.cpp
        mecab/src/string_buffer.h
        mecab/src/tagger.cpp
        mecab/src/thread.h
        mecab/src/tokenizer.cpp
        mecab/src/tokenizer.h
        mecab/src/ucs.h
        mecab/src/ucstable.h
        mecab/src/utils.cpp
        mecab/src/utils.h
        mecab/src/viterbi.cpp
        mecab/src/viterbi.h
        mecab/src/winmain.h
        mecab/src/writer.cpp
        mecab/src/writer.h)
